--- a/views/about/index.haml
+++ b/views/about/index.haml
@@ -21,15 +21,9 @@
     %div.col-lg-12
       %h2.page-header Collaborator
     %div.col-md-6.text-center
-      %a{:href => "http://zh.kcwiki.moe/", :target => "_blank"}
-        %img{:width => 400, :height => 110, :src => "/images/kcwiki.png"}
-      %div.col-xs-9.text-left
-        %div 新浪微博：
-        %iframe{:width => "100%",
-                :height => 89,
-                :frameborder => 0,
-                :scrolling => "no",
-                :src => "http://widget.weibo.com/weiboshow/index.php?language=&width=0&height=550&fansRow=2&ptype=1&speed=0&skin=5&isTitle=0&noborder=1&isWeibo=0&isFans=0&uid=5664614383&verifier=c6b995e8&dpc=1"}
+      %div.row
+        %a{:href => "http://zh.kcwiki.moe/", :target => "_blank"}
+          %img{:width => 400, :height => 110, :src => "/images/kcwiki.png"}
       %div.col-xs-3.text-left
         %div 网站：
         %div
@@ -40,6 +34,13 @@
           %a{:href => "http://w.kcwiki.moe/", :target => "_blank"} 日文wiki镜像
         %div
           %a{:href => "http://doc.kcwiki.moe/", :target => "_blank"} 舰娘百科Excel
+      %div.col-xs-9.text-left
+        %div 新浪微博：
+        %iframe{:width => "100%",
+                :height => 89,
+                :frameborder => 0,
+                :scrolling => "no",
+                :src => "http://widget.weibo.com/weiboshow/index.php?language=&width=0&height=550&fansRow=2&ptype=1&speed=0&skin=5&isTitle=0&noborder=1&isWeibo=0&isFans=0&uid=5664614383&verifier=c6b995e8&dpc=1"}
     %div.col-md-6.text-center
       %a{:href => "https://github.com/poooi/poi", :target => "_blank"}
         %img{:width => 400, :height => 110, :src => "/images/poi.png"}
@@ -49,7 +50,7 @@
           http://0u0.moe/poi
   %div.row
     %div.col-lg-12
-      %h2.page-header How
+      %h2.page-header Plugin
     %div.col-lg-12
       %ul
         %li
