--- a/views/about/index.haml
+++ b/views/about/index.haml
@@ -61,7 +61,9 @@
           %p
             %a{:href => "https://github.com/huoyaoyuan/KCVPlugins/releases", :target => "_blank"}
               下载插件(for KCV3.8.2)
-        / ElectronicObserver(makai)： 有开发意向。
+        %li
+          %p ElectronicObserver(makai)
+          %p 已内置DBSender插件。
 =haml :duoshuo, :locals => { :key => "about",
                              :title => "关于",
                              :url => "http://db.kcwiki.moe/about/" }
