--- a/views/about/index.haml
+++ b/views/about/index.haml
@@ -7,7 +7,7 @@
         %span 目前处于
         %strong 正在开发
         %span 阶段。
-      %p 计划中的项目包括掉落，建造，开发的统计以及分析，未来还将应用于Cut-In，连击触发率等大数据验证分析。
+      %p 计划中的项目包括掉落、建造、开发的统计以及分析，未来还将应用于Cut-In、连击触发率等数据验证分析。
       %p
         %span 本项目目前由
         %strong poi开发组
