--- a/views/drop/map/query.haml
+++ b/views/drop/map/query.haml
@@ -88,4 +88,4 @@
     });
 =haml :duoshuo, :locals => { :key => "drop/map/#{map_id}",
                              :title => "掉落统计##{KCConstants.maps[map_id]}",
-                             :url => "http://db.kcwiki.moe/drop/#{KCConstants.maps[map_id]}.html" }
+                             :url => "http://db.kcwiki.moe/drop/map/#{KCConstants.maps[map_id]}.html" }
