small change in about page

--- a/views/about/index.haml
+++ b/views/about/index.haml
@@ -16,7 +16,7 @@
         %span 合作开发。
       %p 数据由POI浏览器自动采集，可以保证数据的真实性。
       %p 借助poi浏览器庞大的用户基数和源源不断的数据，保证了数据更加趋近于准确和稳定。我们有能力获得第一手的活动掉落情报。
-      %p 网站每隔一小时自动更新一次数据，保证了数据的及时。
+      %p 网站每天自动更新一次数据，保证了数据的及时。
   %div.row
     %div.col-lg-12
       %h2.page-header Collaborator
@@ -63,7 +63,7 @@
               下载插件(for KCV3.8.2)
         %li
           %p ElectronicObserver(makai)
-          %p 已内置DBSender插件。
+          %p 已内置数据发送插件。
 =haml :duoshuo, :locals => { :key => "about",
                              :title => "关于",
                              :url => "http://db.kcwiki.moe/about/" }
