small change in footer

--- a/views/layout.haml
+++ b/views/layout.haml
@@ -23,7 +23,7 @@
     %a#backTop Back To Top
     %footer.footer
       %div.container
-        %div 注：网站数据更新间隔大约为一小时。
+        %div 注：网站仍在开发中，数据每天更新一次。
         %div
           %span 感谢
           %a{:href => "https://github.com/poooi/poi"} poi
