--- a/views/navbar.haml
+++ b/views/navbar.haml
@@ -18,5 +18,7 @@
           %a{:href => "/drop/"} 掉落统计
         %li{:class => locals[:location] == "event" ? "active" : nil}
           %a{:href => "/event/"} 活动统计
+        %li
+          %a{:href => "http://zh.kcwiki.moe/"} 舰娘百科
         %li{:class => locals[:location] == "about" ? "active" : nil}
           %a{:href => "/about/"} 关于
