--- a/views/drop/map/query.haml
+++ b/views/drop/map/query.haml
@@ -43,21 +43,12 @@
                   %th{:"data-field" => "type",
                       :"data-sortable" => "true"} 舰种
                   %th{:"data-field" => "totalCount"} 数量
-                  %th{:"data-field" => "sCount",
+                  %th{:"data-field" => "sTotalCount",
                       :"data-sortable" => "true"} S胜
-                  %th{:"data-field" => "aCount",
+                  %th{:"data-field" => "aTotalCount",
                       :"data-sortable" => "true"} A胜
-                  %th{:"data-field" => "bCount",
+                  %th{:"data-field" => "bTotalCount",
                       :"data-sortable" => "true"} B胜
-                  %th{:"data-field" => "cCount",
-                      :"data-visible" => "false",
-                      :"data-sortable" => "true"} C败
-                  %th{:"data-field" => "dCount",
-                      :"data-visible" => "false",
-                      :"data-sortable" => "true"} D败
-                  %th{:"data-field" => "eCount",
-                      :"data-visible" => "false",
-                      :"data-sortable" => "true"} E败
                   %th{:"data-field" => "hqLvRange"} 提督等级
                   %th{:"data-field" => "dropRate",
                       :"data-formatter" => "dropRateFormatter",
