only count s_win in event-sanma2015 (#7)

--- a/views/event-sanma2015/index.haml
+++ b/views/event-sanma2015/index.haml
@@ -11,7 +11,7 @@
             %td 海域
             %td 战斗点
             %td 掉落次数
-            %td 战斗胜利次数
+            %td S胜利次数
             %td 掉落率
         %tbody
           - data.sort{|a, b| b[:rate] <=> a[:rate]}.each do |d|
