--- a/views/navbar.haml
+++ b/views/navbar.haml
@@ -17,7 +17,7 @@
         %li{:class => locals[:location] == "drop" ? "active" : nil}
           %a{:href => "/drop/"} 掉落统计
         %li{:class => locals[:location] == "event" ? "active" : nil}
-          %a{:href => "/event-sanma2015/"} 活动统计(秋刀鱼祭典)
+          %a{:href => "/event-halloween2015/"} 活动统计(万圣节)
         %li
           %a{:href => "http://zh.kcwiki.moe/"} 舰娘百科
         %li{:class => locals[:location] == "about" ? "active" : nil}
