add event-autumn2015 page

--- a/views/drop/index.haml
+++ b/views/drop/index.haml
@@ -8,7 +8,7 @@
           %h4.panel-title 海域
         %div.panel-body
           %ul.nav.nav-pills
-            %li.active
+            %li
               %a{:href => "#area1", :"data-toggle" => "tab"} 鎮守府海域
             %li
               %a{:href => "#area2", :"data-toggle" => "tab"} 南西諸島海域
@@ -22,6 +22,8 @@
               %a{:href => "#area6", :"data-toggle" => "tab"} 中部海域
             %li
               %a{:href => "#area31", :"data-toggle" => "tab"} 反撃！第二次SN作戦
+            %li.active
+              %a{:href => "#area32", :"data-toggle" => "tab"} 突入！海上輸送作戦
           %div.tab-content
             %div#area1.tab-pane.active
               %div.col-xs-12.text-center
@@ -147,6 +149,9 @@
                 %div.row
                   %a{:href => "/drop/map/FS方面海域.html"}
                     %img{:src => "http://upload.kcwiki.moe/commons/e/ec/MapBannerE-7Summer2015.png"}
+            %div#area32.tab-pane
+                %div.col-xs-12.text-center
+                  数据收集整理中...
   %div.col-xs-12.col-lg-6
     %div.panel-group
       %div.panel.panel-primary
