--- a/views/drop/index.haml
+++ b/views/drop/index.haml
@@ -25,7 +25,7 @@
             %li.active
               %a{:href => "#area32", :"data-toggle" => "tab"} 突入！海上輸送作戦
           %div.tab-content
-            %div#area1.tab-pane.active
+            %div#area1.tab-pane
               %div.col-xs-12.text-center
                 %div.row
                   %a{:href => "/drop/map/鎮守府正面海域.html"}
@@ -149,9 +149,23 @@
                 %div.row
                   %a{:href => "/drop/map/FS方面海域.html"}
                     %img{:src => "http://upload.kcwiki.moe/commons/e/ec/MapBannerE-7Summer2015.png"}
-            %div#area32.tab-pane
-                %div.col-xs-12.text-center
-                  数据收集整理中...
+            %div#area32.tab-pane.active
+              %div.col-xs-12.text-center
+                %div.row
+                  %a{:href => "/drop/map/ショートランド泊地沖.html"}
+                    %img{:src => "http://upload.kcwiki.moe/commons/7/7b/MapBannerE-1Autumn2015.png"}
+                %div.row
+                  %a{:href => "/drop/map/コロネハイカラ島沖.html"}
+                    %img{:src => "http://upload.kcwiki.moe/commons/0/07/MapBannerE-2Autumn2015.png"}
+                %div.row
+                  %a{:href => "/drop/map/コロネハイカラ島東方沖.html"}
+                    %img{:src => "http://upload.kcwiki.moe/commons/4/40/MapBannerE-3Autumn2015.png"}
+                %div.row
+                  %a{:href => "/drop/map/西方海域戦線 ステビア海.html"}
+                    %img{:src => "http://upload.kcwiki.moe/commons/a/a5/MapBannerE-4Autumn2015.png"}
+                %div.row
+                  %a{:href => "/drop/map/バニラ湾沖.html"}
+                    %img{:src => "http://upload.kcwiki.moe/commons/5/5d/MapBannerE-5Autumn2015.png"}
   %div.col-xs-12.col-lg-6
     %div.panel-group
       %div.panel.panel-primary
