update constants, add advertisement and some wiki page, temporarily remove construction page

--- a/views/layout.haml
+++ b/views/layout.haml
@@ -19,6 +19,7 @@
       %script{:src => "/scripts/respond.min.js"}
   %body
     =haml :navbar, :locals => locals
+    =haml :ad
     = yield
     %a#backTop Back To Top
     %footer.footer
