--- a/views/navbar.haml
+++ b/views/navbar.haml
@@ -13,7 +13,7 @@
     %div#navbar-main.navbar-collapse.collapse
       %ul.nav.navbar-nav
         %li{:class => locals[:location] == "construction" ? "active" : nil}
-          %a{:href => "/construction/"} 建造统计
+          %a{:href => "#"} 建造统计(砍掉重练@_@)
         %li{:class => locals[:location] == "drop" ? "active" : nil}
           %a{:href => "/drop/"} 掉落统计
         %li{:class => locals[:location] == "event" ? "active" : nil}
