--- a/views/drop/index.haml
+++ b/views/drop/index.haml
@@ -8,7 +8,7 @@
           %h4.panel-title 海域
         %div.panel-body
           %ul.nav.nav-pills
-            %li
+            %li.active
               %a{:href => "#area1", :"data-toggle" => "tab"} 鎮守府海域
             %li
               %a{:href => "#area2", :"data-toggle" => "tab"} 南西諸島海域
@@ -22,150 +22,146 @@
               %a{:href => "#area6", :"data-toggle" => "tab"} 中部海域
             %li
               %a{:href => "#area31", :"data-toggle" => "tab"} 反撃！第二次SN作戦
-            %li.active
+            %li
               %a{:href => "#area32", :"data-toggle" => "tab"} 突入！海上輸送作戦
           %div.tab-content
-            %div#area1.tab-pane
+            %div#area1.tab-pane.active
               %div.col-xs-12.text-center
                 %div.row
                   %a{:href => "/drop/map/鎮守府正面海域.html"}
-                    %img{:src => "http://kcwiki.misaka.cn/commons/thumb/9/99/MapBanner1-1.png/250px-MapBanner1-1.png"}
+                    %img{:src => kcwiki_get_thumb("MapBanner1-1.png", size: 250, protocol: "http")}
                   %a{:href => "/drop/map/南西諸島沖.html"}
-                    %img{:src => "http://kcwiki.misaka.cn/commons/thumb/8/81/MapBanner1-2.png/250px-MapBanner1-2.png"}
+                    %img{:src => kcwiki_get_thumb("MapBanner1-2.png", size: 250, protocol: "http")}
                 %div.row
                   %a{:href => "/drop/map/製油所地帯沿岸.html"}
-                    %img{:src => "http://kcwiki.misaka.cn/commons/thumb/4/4c/MapBanner1-3.png/250px-MapBanner1-3.png"}
+                    %img{:src => kcwiki_get_thumb("MapBanner1-3.png", size: 250, protocol: "http")}
                   %a{:href => "/drop/map/南西諸島防衛線.html"}
-                    %img{:src => "http://kcwiki.misaka.cn/commons/thumb/3/3c/MapBanner1-4.png/250px-MapBanner1-4.png"}
+                    %img{:src => kcwiki_get_thumb("MapBanner1-4.png", size: 250, protocol: "http")}
                 %div.row
                   %a{:href => "/drop/map/鎮守府近海.html"}
-                    %img{:src => "http://kcwiki.misaka.cn/commons/thumb/5/50/MapBanner1-5.png/500px-MapBanner1-5.png"}
+                    %img{:src => kcwiki_get_thumb("MapBanner1-5.png", size: 500, protocol: "http")}
                 %div.row
                   %a{:href => "/drop/map/鎮守府近海航路.html"}
-                    %img{:src => "http://kcwiki.misaka.cn/commons/thumb/e/e2/MapBanner1-6.png/500px-MapBanner1-6.png"}
+                    %img{:src => kcwiki_get_thumb("MapBanner1-6.png", size: 500, protocol: "http")}
             %div#area2.tab-pane
               %div.col-xs-12.text-center
                 %div.row
                   %a{:href => "/drop/map/カムラン半島.html"}
-                    %img{:src => "http://kcwiki.misaka.cn/commons/thumb/5/56/MapBanner2-1.png/250px-MapBanner2-1.png"}
+                    %img{:src => kcwiki_get_thumb("MapBanner2-1.png", size: 250, protocol: "http")}
                   %a{:href => "/drop/map/バシー島沖.html"}
-                    %img{:src => "http://kcwiki.misaka.cn/commons/thumb/c/c4/MapBanner2-2.png/250px-MapBanner2-2.png"}
+                    %img{:src => kcwiki_get_thumb("MapBanner2-2.png", size: 250, protocol: "http")}
                 %div.row
                   %a{:href => "/drop/map/東部オリョール海.html"}
-                    %img{:src => "http://kcwiki.misaka.cn/commons/thumb/5/52/MapBanner2-3.png/250px-MapBanner2-3.png"}
+                    %img{:src => kcwiki_get_thumb("MapBanner2-3.png", size: 250, protocol: "http")}
                   %a{:href => "/drop/map/沖ノ島海域.html"}
-                    %img{:src => "http://kcwiki.misaka.cn/commons/thumb/9/98/MapBanner2-4.png/250px-MapBanner2-4.png"}
+                    %img{:src => kcwiki_get_thumb("MapBanner2-4.png", size: 250, protocol: "http")}
                 %div.row
                   %a{:href => "/drop/map/沖ノ島沖.html"}
-                    %img{:src => "http://kcwiki.misaka.cn/commons/thumb/4/4c/MapBanner2-5.png/500px-MapBanner2-5.png"}
+                    %img{:src => kcwiki_get_thumb("MapBanner2-5.png", size: 500, protocol: "http")}
                 %div.row
-                  %img{:src => "http://kcwiki.misaka.cn/commons/thumb/9/9e/MapBanner0-5.png/500px-MapBanner0-5.png"}
+                  %img{:src => kcwiki_get_thumb("MapBanner0-5.png", size: 500, protocol: "http")}
             %div#area3.tab-pane
               %div.col-xs-12.text-center
                 %div.row
                   %a{:href => "/drop/map/モーレイ海.html"}
-                    %img{:src => "http://kcwiki.misaka.cn/commons/thumb/4/4b/MapBanner3-1.png/250px-MapBanner3-1.png"}
+                    %img{:src => kcwiki_get_thumb("MapBanner3-1.png", size: 250, protocol: "http")}
                   %a{:href => "/drop/map/キス島沖.html"}
-                    %img{:src => "http://kcwiki.misaka.cn/commons/thumb/5/59/MapBanner3-2.png/250px-MapBanner3-2.png"}
+                    %img{:src => kcwiki_get_thumb("MapBanner3-2.png", size: 250, protocol: "http")}
                 %div.row
                   %a{:href => "/drop/map/アルフォンシーノ方面.html"}
-                    %img{:src => "http://kcwiki.misaka.cn/commons/thumb/a/ad/MapBanner3-3.png/250px-MapBanner3-3.png"}
+                    %img{:src => kcwiki_get_thumb("MapBanner3-3.png", size: 250, protocol: "http")}
                   %a{:href => "/drop/map/北方海域全域.html"}
-                    %img{:src => "http://kcwiki.misaka.cn/commons/thumb/2/26/MapBanner3-4.png/250px-MapBanner3-4.png"}
+                    %img{:src => kcwiki_get_thumb("MapBanner3-4.png", size: 250, protocol: "http")}
                 %div.row
                   %a{:href => "/drop/map/北方AL海域.html"}
-                    %img{:src => "http://kcwiki.misaka.cn/commons/thumb/e/e5/MapBanner3-5.png/500px-MapBanner3-5.png"}
+                    %img{:src => kcwiki_get_thumb("MapBanner3-5.png", size: 500, protocol: "http")}
                 %div.row
-                  %img{:src => "http://kcwiki.misaka.cn/commons/thumb/9/9e/MapBanner0-5.png/500px-MapBanner0-5.png"}
+                  %img{:src => kcwiki_get_thumb("MapBanner0-5.png", size: 500, protocol: "http")}
             %div#area4.tab-pane
               %div.col-xs-12.text-center
                 %div.row
                   %a{:href => "/drop/map/ジャム島攻略作戦.html"}
-                    %img{:src => "http://kcwiki.misaka.cn/commons/thumb/b/ba/MapBanner4-1.png/250px-MapBanner4-1.png"}
+                    %img{:src => kcwiki_get_thumb("MapBanner4-1.png", size: 250, protocol: "http")}
                   %a{:href => "/drop/map/カレー洋制圧戦.html"}
-                    %img{:src => "http://kcwiki.misaka.cn/commons/thumb/5/55/MapBanner4-2.png/250px-MapBanner4-2.png"}
+                    %img{:src => kcwiki_get_thumb("MapBanner4-2.png", size: 250, protocol: "http")}
                 %div.row
                   %a{:href => "/drop/map/リランカ島空襲.html"}
-                    %img{:src => "http://kcwiki.misaka.cn/commons/thumb/5/5b/MapBanner4-3.png/250px-MapBanner4-3.png"}
+                    %img{:src => kcwiki_get_thumb("MapBanner4-3.png", size: 250, protocol: "http")}
                   %a{:href => "/drop/map/カスガダマ沖海戦.html"}
-                    %img{:src => "http://kcwiki.misaka.cn/commons/thumb/6/61/MapBanner4-4.png/250px-MapBanner4-4.png"}
+                    %img{:src => kcwiki_get_thumb("MapBanner4-4.png", size: 250, protocol: "http")}
                 %div.row
                   %a{:href => "/drop/map/カレー洋リランカ島沖.html"}
-                    %img{:src => "http://kcwiki.misaka.cn/commons/thumb/b/b6/MapBanner4-5.png/500px-MapBanner4-5.png"}
+                    %img{:src => kcwiki_get_thumb("MapBanner4-5.png", size: 500, protocol: "http")}
                 %div.row
-                  %img{:src => "http://kcwiki.misaka.cn/commons/thumb/9/9e/MapBanner0-5.png/500px-MapBanner0-5.png"}
+                  %img{:src => kcwiki_get_thumb("MapBanner0-5.png", size: 500, protocol: "http")}
             %div#area5.tab-pane
               %div.col-xs-12.text-center
                 %div.row
                   %a{:href => "/drop/map/南方海域前面.html"}
-                    %img{:src => "http://kcwiki.misaka.cn/commons/thumb/5/5e/MapBanner5-1.png/250px-MapBanner5-1.png"}
+                    %img{:src => kcwiki_get_thumb("MapBanner5-1.png", size: 250, protocol: "http")}
                   %a{:href => "/drop/map/珊瑚諸島沖.html"}
-                    %img{:src => "http://kcwiki.misaka.cn/commons/thumb/d/d8/MapBanner5-2.png/250px-MapBanner5-2.png"}
+                    %img{:src => kcwiki_get_thumb("MapBanner5-2.png", size: 250, protocol: "http")}
                 %div.row
                   %a{:href => "/drop/map/サブ島沖海域.html"}
-                    %img{:src => "http://kcwiki.misaka.cn/commons/thumb/8/8d/MapBanner5-3.png/250px-MapBanner5-3.png"}
+                    %img{:src => kcwiki_get_thumb("MapBanner5-3.png", size: 250, protocol: "http")}
                   %a{:href => "/drop/map/サーモン海域.html"}
-                    %img{:src => "http://kcwiki.misaka.cn/commons/thumb/7/7a/MapBanner5-4.png/250px-MapBanner5-4.png"}
+                    %img{:src => kcwiki_get_thumb("MapBanner5-4.png", size: 250, protocol: "http")}
                 %div.row
                   %a{:href => "/drop/map/サーモン海域北方.html"}
-                    %img{:src => "http://kcwiki.misaka.cn/commons/thumb/d/d8/MapBanner5-5.png/500px-MapBanner5-5.png"}
+                    %img{:src => kcwiki_get_thumb("MapBanner5-5.png", size: 500, protocol: "http")}
                 %div.row
-                  %img{:src => "http://kcwiki.misaka.cn/commons/thumb/9/9e/MapBanner0-5.png/500px-MapBanner0-5.png"}
+                  %img{:src => kcwiki_get_thumb("MapBanner0-5.png", size: 500, protocol: "http")}
             %div#area6.tab-pane
               %div.col-xs-12.text-center
                 %div.row
                   %a{:href => "/drop/map/中部海域哨戒線.html"}
-                    %img{:src => "http://kcwiki.misaka.cn/commons/thumb/b/bb/MapBanner6-1.png/250px-MapBanner6-1.png"}
+                    %img{:src => kcwiki_get_thumb("MapBanner6-1.png", size: 250, protocol: "http")}
                   %a{:href => "/drop/map/MS諸島沖.html"}
-                    %img{:src => "http://kcwiki.misaka.cn/commons/thumb/2/2a/MapBanner6-2.png/250px-MapBanner6-2.png"}
+                    %img{:src => kcwiki_get_thumb("MapBanner6-2.png", size: 250, protocol: "http")}
                 %div.row
                   %a{:href => "/drop/map/グアノ環礁沖海域.html"}
-                    %img{:src => "http://kcwiki.misaka.cn/commons/thumb/3/38/MapBanner6-3.png/250px-MapBanner6-3.png"}
-                  %img{:src => "http://kcwiki.misaka.cn/commons/thumb/3/3c/MapBanner0-0.png/250px-MapBanner0-0.png"}
-                %div.row
-                  %img{:src => "http://kcwiki.misaka.cn/commons/thumb/9/9e/MapBanner0-5.png/500px-MapBanner0-5.png"}
-                %div.row
-                  %img{:src => "http://kcwiki.misaka.cn/commons/thumb/9/9e/MapBanner0-5.png/500px-MapBanner0-5.png"}
+                    %img{:src => kcwiki_get_thumb("MapBanner6-3.png", size: 250, protocol: "http")}
+                  %img{:src => kcwiki_get_thumb("MapBanner0-0.png", size: 250, protocol: "http")}
             %div#area31.tab-pane
               %div.col-xs-12.text-center
                 %div.row
                   %a{:href => "/drop/map/ショートランド沖.html"}
-                    %img{:src => "http://kcwiki.misaka.cn/commons/1/12/MapBannerE-1Summer2015.png"}
+                    %img{:src => kcwiki_get_file("MapBannerE-1Summer2015.png", protocol: "http")}
                 %div.row
                   %a{:href => "/drop/map/ソロモン海.html"}
-                    %img{:src => "http://kcwiki.misaka.cn/commons/b/bb/MapBannerE-2Summer2015.png"}
+                    %img{:src => kcwiki_get_file("MapBannerE-2Summer2015.png", protocol: "http")}
                 %div.row
                   %a{:href => "/drop/map/南太平洋海域.html"}
-                    %img{:src => "http://kcwiki.misaka.cn/commons/1/1d/MapBannerE-3Summer2015.png"}
+                    %img{:src => kcwiki_get_file("MapBannerE-3Summer2015.png", protocol: "http")}
                 %div.row
                   %a{:href => "/drop/map/アイアンボトムサウンド.html"}
-                    %img{:src => "http://kcwiki.misaka.cn/commons/d/d4/MapBannerE-4Summer2015.png"}
+                    %img{:src => kcwiki_get_file("MapBannerE-4Summer2015.png", protocol: "http")}
                 %div.row
                   %a{:href => "/drop/map/西方海域戦線 カレー洋.html"}
-                    %img{:src => "http://kcwiki.misaka.cn/commons/4/46/MapBannerE-5Summer2015.png"}
+                    %img{:src => kcwiki_get_file("MapBannerE-5Summer2015.png", protocol: "http")}
                 %div.row
                   %a{:href => "/drop/map/ソロモン海東部海域.html"}
-                    %img{:src => "http://kcwiki.misaka.cn/commons/0/03/MapBannerE-6Summer2015.png"}
+                    %img{:src => kcwiki_get_file("MapBannerE-6Summer2015.png", protocol: "http")}
                 %div.row
                   %a{:href => "/drop/map/FS方面海域.html"}
-                    %img{:src => "http://kcwiki.misaka.cn/commons/e/ec/MapBannerE-7Summer2015.png"}
-            %div#area32.tab-pane.active
+                    %img{:src => kcwiki_get_file("MapBannerE-7Summer2015.png", protocol: "http")}
+            %div#area32.tab-pane
               %div.col-xs-12.text-center
                 %div.row
                   %a{:href => "/drop/map/ショートランド泊地沖.html"}
-                    %img{:src => "http://kcwiki.misaka.cn/commons/7/7b/MapBannerE-1Autumn2015.png"}
+                    %img{:src => kcwiki_get_file("MapBannerE-1Autumn2015.png", protocol: "http")}
                 %div.row
                   %a{:href => "/drop/map/コロネハイカラ島沖.html"}
-                    %img{:src => "http://kcwiki.misaka.cn/commons/0/07/MapBannerE-2Autumn2015.png"}
+                    %img{:src => kcwiki_get_file("MapBannerE-2Autumn2015.png", protocol: "http")}
                 %div.row
                   %a{:href => "/drop/map/コロネハイカラ島東方沖.html"}
-                    %img{:src => "http://kcwiki.misaka.cn/commons/4/40/MapBannerE-3Autumn2015.png"}
+                    %img{:src => kcwiki_get_file("MapBannerE-3Autumn2015.png", protocol: "http")}
                 %div.row
                   %a{:href => "/drop/map/西方海域戦線 ステビア海.html"}
-                    %img{:src => "http://kcwiki.misaka.cn/commons/a/a5/MapBannerE-4Autumn2015.png"}
+                    %img{:src => kcwiki_get_file("MapBannerE-4Autumn2015.png", protocol: "http")}
                 %div.row
                   %a{:href => "/drop/map/バニラ湾沖.html"}
-                    %img{:src => "http://kcwiki.misaka.cn/commons/5/5d/MapBannerE-5Autumn2015.png"}
+                    %img{:src => kcwiki_get_file("MapBannerE-5Autumn2015.png", protocol: "http")}
   %div.col-xs-12.col-lg-6
     %div.panel-group
       %div.panel.panel-primary
