fix js dependency bug

--- a/views/layout.haml
+++ b/views/layout.haml
@@ -31,15 +31,15 @@
           %span 为本站提供数据支持。如果你在使用的过程中发现什么Bug 抑或是一些好的建议都欢迎在
           %a{:href => "https://github.com/Gizeta/poi-statistics/issues"}Github Issue
           %span 上提交。
-    %script{:src => "//cdn.rawgit.com/codesalsa/backTop/master/dist/jquery.backTop.min.js", :async => "async"}
+    %script{:src => "//cdn.rawgit.com/codesalsa/backTop/master/dist/jquery.backTop.min.js"}
     %script{:src => "//cdn.rawgit.com/hhurz/tableExport.jquery.plugin/master/tableExport.min.js"}
     %script{:src => "//cdnjs.cloudflare.com/ajax/libs/FileSaver.js/2014-11-29/FileSaver.min.js"}
     %script{:src => "//cdn.bootcss.com/bootstrap/3.3.6/js/bootstrap.min.js"}
     %script{:src => "//cdn.bootcss.com/bootstrap-table/1.9.1/bootstrap-table.min.js"}
     %script{:src => "//cdn.bootcss.com/bootstrap-table/1.9.1/extensions/export/bootstrap-table-export.min.js"}
     / IE10 viewport hack for Surface/desktop Windows 8 bug
-    %script{:src => "/scripts/ie10-viewport-bug-workaround.js", :async => "async"}
-    %script{:src => "/scripts/offcanvas.js", :async => "async"}
+    %script{:src => "/scripts/ie10-viewport-bug-workaround.js"}
+    %script{:src => "/scripts/offcanvas.js"}
 
     :javascript
       $(document).ready(function() {
